src/objects/Incident_Participation__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incident Participants</relationshipLabel>
        <relationshipName>Incident_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident_Date__c</fullName>
        <formula>Incident_Report__r.Incident_Date__c</formula>
        <label>Incident Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incident_Owner__c</fullName>
        <formula>Incident_Report__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incident Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Report__c</fullName>
        <label>Incident Report</label>
        <referenceTo>Incident_Report__c</referenceTo>
        <relationshipLabel>Incident Participants</relationshipLabel>
        <relationshipName>Incident_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Called__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Called?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Plan</label>
        <referenceTo>Program_Plan__c</referenceTo>
        <relationshipLabel>Incident Reports</relationshipLabel>
        <relationshipName>Incident_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Parent_Not_Called__c</fullName>
        <label>Reason Parent Not Called</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement__c</fullName>
        <inlineHelpText>Record the client&apos;s statement here.</inlineHelpText>
        <label>Statement</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Incident Participant</label>
    <nameField>
        <displayFormat>IP-{000000}</displayFormat>
        <label>Incident Participation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Enter_reason_if_parent_not_called</fullName>
        <active>true</active>
        <errorConditionFormula>and(not( Parent_Called__c ),
isblank( Reason_Parent_Not_Called__c ))</errorConditionFormula>
        <errorDisplayField>Reason_Parent_Not_Called__c</errorDisplayField>
        <errorMessage>If a parent was not contacted, you must enter a reason.</errorMessage>
    </validationRules>
</CustomObject>